chandeliers-lus/tests/compile_fail/ui/clk/reclock.stderr
error: Two subexpressions have different clocks: 'when b0 and 'when b1a are incompatible
  --> tests/compile_fail/ui/clk/reclock.rs:11:9
   |
11 |         b1b = true when b1a; // Error
   |         ^^^^^^^^^^^^^^^^^^^
   |
note: This is clocked by 'when b0
  --> tests/compile_fail/ui/clk/reclock.rs:11:9
   |
11 |         b1b = true when b1a; // Error
   |         ^^^
note: defined here
  --> tests/compile_fail/ui/clk/reclock.rs:4:35
   |
4  |         b1a, b1b, b1c : bool when b0;
   |                                   ^^
note: This is clocked by 'when b1a
  --> tests/compile_fail/ui/clk/reclock.rs:11:15
   |
11 |         b1b = true when b1a; // Error
   |               ^^^^^^^^^^^^^
note: defined here
  --> tests/compile_fail/ui/clk/reclock.rs:11:25
   |
11 |         b1b = true when b1a; // Error
   |                         ^^^
   = note: some operations (notably assignment) have stricter requirements than others on clock equality
   = note: you may need to insert a `when` operator

error: This expression is too slow: expected the implicit clock 'self, found 'when b0
  --> tests/compile_fail/ui/clk/reclock.rs:16:29
   |
16 |         b2c = (not b0) when b1a; // Error
   |                             ^^^
   |
note: Found 'when b0 here
  --> tests/compile_fail/ui/clk/reclock.rs:4:35
   |
4  |         b1a, b1b, b1c : bool when b0;
   |                                   ^^
note: Expected because this expression moves at the implicit pace
  --> tests/compile_fail/ui/clk/reclock.rs:16:15
   |
16 |         b2c = (not b0) when b1a; // Error
   |               ^^^^^^^^
